c5m2 added clipping to improve usage of ladder on tree by gazebo

--- a/cfg/stripper/maps/c5m2_park.cfg
+++ b/cfg/stripper/maps/c5m2_park.cfg
@@ -1487,6 +1487,81 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Clipping to assist infected
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6918 -3820 -23"
+	"angles" "0 45 0"
+	"mins" "-16 -6 -4"
+	"maxs" "16 6 4"
+	"boxmins" "-16 -6 -4"
+	"boxmaxs" "16 6 4"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6918 -3825 -15"
+	"angles" "0 45 0"
+	"mins" "-16 -6 -4"
+	"maxs" "16 6 4"
+	"boxmins" "-16 -6 -4"
+	"boxmaxs" "16 6 4"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6917 -3827 -7"
+	"angles" "0 45 0"
+	"mins" "-16 -6 -4"
+	"maxs" "16 6 4"
+	"boxmins" "-16 -6 -4"
+	"boxmaxs" "16 6 4"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6935 -3841 1"
+	"angles" "0 45 0"
+	"mins" "-16 -6 -4"
+	"maxs" "16 6 4"
+	"boxmins" "-16 -6 -4"
+	"boxmaxs" "16 6 4"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6939 -3848 9"
+	"angles" "0 45 0"
+	"mins" "-16 -6 -4"
+	"maxs" "16 6 4"
+	"boxmins" "-16 -6 -4"
+	"boxmaxs" "16 6 4"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6943 -3857 17"
+	"angles" "0 45 0"
+	"mins" "-16 -6 -4"
+	"maxs" "16 6 4"
+	"boxmins" "-16 -6 -4"
+	"boxmaxs" "16 6 4"
+	"initialstate" "1"
+	"BlockType" "2"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-6945 -3850 16"
+	"mins" "-5 -4 -4"
+	"maxs" "5 4 4"
+	"initialstate" "1"
+	"BlockType" "2"
+}
 ; --- Infected ladders around the park exit
 ; --- Left side
 {
