c5m2 improved the ladders added to the hedges for the park route rework to stop players getting stuck at the top

--- a/cfg/stripper/maps/c5m2_park.cfg
+++ b/cfg/stripper/maps/c5m2_park.cfg
@@ -1912,7 +1912,7 @@ add:
 }
 {
 	"classname" "func_simpleladder"
-	"origin" "-1056.64 -8265.08 -14"
+	"origin" "-1059.64 -8268.08 -9"
 	"angles" "0 286.5 0"
 	"model" "*5"
 	"normal.x" "0.95"
@@ -1922,13 +1922,14 @@ add:
 }
 {
 	"classname" "func_simpleladder"
-	"origin" "-10626.35 2226.08 -14"
+	"origin" "-10617.34 2224.08 -9"
 	"angles" "0 106.5 0"
 	"model" "*5"
 	"normal.x" "-0.95"
 	"normal.y" "-0.28"
 	"normal.z" "0.00"
 	"team" "2"
+	"targetname" "anv_mapfixes_FUCK"
 }
 ; --- Right side wall
 {
