Removed additional soundscape entities Removed microphone / speaker effects c5m2 added an ammo pile by the event button c5m3 made the guns in the first house always have a shotgun and smg

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -283,8 +283,19 @@ modify:
 ; ==             Remove or fix map sounds            ==
 ; =====================================================
 filter:
+; --- Remove environmental sounds and DSP
 {
 	"classname" "env_soundscape"
+}
+{
+	"classname" "env_soundscape_proxy"
+}
+{
+	"classname" "env_soundscape_triggerable"
+}
+; --- Remove microphone / speaker effects
+{
+	"classname" "env_microphone"
 }
 
 ; =====================================================
