--- a/cfg/stripper/maps/c5m2_park.cfg
+++ b/cfg/stripper/maps/c5m2_park.cfg
@@ -126,6 +126,18 @@ modify:
 		"origin" "-6836 -5544 -224"
 	}
 }
+; --- Ammo pile by the event button
+add:
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "-7985 -5848 -32"
+	"angles" "0 0 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
 ; --- Remove some useless pills at the very end of the map
 filter:
 {
