--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -16,6 +16,27 @@
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
 modify:
+; --- Make the guns in the first house always spawn a shotgun and SMG
+{
+	match:
+	{
+		"hammerid" "2131976"
+	}
+	replace:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "2131970"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_shotgun"
+	}
+}
 ; --- Make the guns before the sewer drop always spawn a shotgun and SMG
 {
 	match:
