c1m1 Block survivors from standing on the awning above the check-in desk c1m1 Slightly reduced fog strength on ground floor c1m2 Removed the police car at the bottom of the first ramp (which was previously moved to the other end of the street) c1m3 Moved the hand truck at the start of the event path to a less obtrusive position Fixed fire extinguishers falling off walls

--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -296,6 +296,16 @@ modify:
 		"OnOpen" "lower_ledge_block,Kill,,0,-1"
 	}
 }
+add:
+; --- Block survivors from standing on the awning above the check-in desk
+{
+	"classname" "env_physics_blocker"
+	"origin" "720 4832 1444"
+	"mins" "-216 -32 -124"
+	"maxs" "216 32 124"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 
 ; =====================================================
 ; ==                  OUT OF BOUNDS                  ==
@@ -724,8 +734,8 @@ modify:
     }
     replace:
     {
-		"fogstart" "1"
-		"fogend" "768"
+		"fogstart" "64"
+		"fogend" "832"
     }
 }
 modify:
