--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -315,29 +315,13 @@ add:
 ; ==                 HITTABLE CHANGES                ==
 ; ==           Add/remove/modify hittables           ==
 ; =====================================================
-; --- Move the police car at the bottom of the first ramp to the opposite end of the street
-modify:
+; --- Remove the police car at the bottom of the first ramp
+filter:
 {
-	match:
-	{
-		"targetname" "InstanceAuto21-police_car"
-	}
-	replace:
-	{
-		"origin" "3438 2565 452"
-		"angles" "1.73031 60.5054 4.49088"
-	}
+	"targetname" "InstanceAuto21-police_car"
 }
 {
-	match:
-	{
-		"targetname" "InstanceAuto21-police_car_glass"
-	}
-	replace:
-	{
-		"origin" "3438 2565 452"
-		"angles" "1.73031 60.5054 4.49088"
-	}
+	"targetname" "InstanceAuto21-police_car_glass"
 }
 
 
