--- a/cfg/stripper/maps/c1m3_mall.cfg
+++ b/cfg/stripper/maps/c1m3_mall.cfg
@@ -246,6 +246,19 @@ add:
 ; ==                 HITTABLE CHANGES                ==
 ; ==           Add/remove/modify hittables           ==
 ; =====================================================
+; --- Move the hand truck at the start of the event path to a less obtrusive position
+modify:
+{
+	match:
+	{
+		"hammerid" "49558"
+	}
+	replace:
+	{
+		"origin" "782 -1147 280"
+		"angles" "0 90 0"
+	}
+}
 
 
 ; #############  MAP CLIPPING AND ISSUES  #############
