c5m3 Make it easier to tell which cars are not alarmed by changing their colors (#12)

--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -567,88 +567,355 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Make non-active alarm cars easier to tell apart by changing their colors - Currently bugged on 2nd round
-;modify:
-;{
-;	match:
-;	{
-;		"targetname" "alarm1-relay_caralarm_off"
-;	}
-;	insert:
-;	{
-;		"OnTrigger" "alarm1-caralarm_car1,Color,45 58 151,1,-1"
-;	}
-;}
-;{
-;	match:
-;	{
-;		"targetname" "alarm2-relay_caralarm_off"
-;	}
-;	insert:
-;	{
-;		"OnTrigger" "alarm2-caralarm_car1,Color,9 41 138,1,-1"
-;	}
-;}
-;{
-;	match:
-;	{
-;		"targetname" "alarm3-relay_caralarm_off"
-;	}
-;	insert:
-;	{
-;		"OnTrigger" "alarm3-caralarm_car1,Color,68 91 183,1,-1"
-;	}
-;}
-;{
-;	match:
-;	{
-;		"targetname" "alarm4-relay_caralarm_off"
-;	}
-;	insert:
-;	{
-;		"OnTrigger" "alarm4-caralarm_car1,Color,68 68 183,1,-1"
-;	}
-;}
-;{
-;	match:
-;	{
-;		"targetname" "alarm5-relay_caralarm_off"
-;	}
-;	insert:
-;	{
-;		"OnTrigger" "alarm5-caralarm_car1,Color,52 70 114,1,-1"
-;	}
-;}
-;{
-;	match:
-;	{
-;		"targetname" "alarm6-relay_caralarm_off"
-;	}
-;	insert:
-;	{
-;		"OnTrigger" "alarm6-caralarm_car1,Color,9 41 138,1,-1"
-;	}
-;}
-;{
-;	match:
-;	{
-;		"targetname" "alarm7-relay_caralarm_off"
-;	}
-;	insert:
-;	{
-;		"OnTrigger" "alarm7-caralarm_car1,Color,45 58 151,1,-1"
-;	}
-;}
-;{
-;	match:
-;	{
-;		"targetname" "alarm8-relay_caralarm_off"
-;	}
-;	insert:
-;	{
-;		"OnTrigger" "alarm8-caralarm_car1,Color,68 91 183,1,-1"
-;	}
-;}
+; --- Make it easier to tell which cars are not alarmed by changing their colors
+add:
+{
+	"classname" "logic_case"
+	"targetname" "alarm1-case_car_color_off"
+	"Case01" "1"
+	"Case02" "2"
+	"Case03" "3"
+	"Case04" "4"
+	"Case05" "5"
+	"Case06" "6"
+	"OnCase01" "alarm1-caralarm_car1,Color,99 135 157,0,-1"
+	"OnCase02" "alarm1-caralarm_car1,Color,52 46 46,0,-1"
+	"OnCase03" "alarm1-caralarm_car1,Color,173 186 172,0,-1"
+	"OnCase04" "alarm1-caralarm_car1,Color,52 70 114,0,-1"
+	"OnCase05" "alarm1-caralarm_car1,Color,9 41 138,0,-1"
+	"OnCase06" "alarm1-caralarm_car1,Color,68 91 183,0,-1"
+}
+{
+	"classname" "logic_case"
+	"targetname" "alarm2-case_car_color_off"
+	"Case01" "1"
+	"Case02" "2"
+	"Case03" "3"
+	"Case04" "4"
+	"Case05" "5"
+	"Case06" "6"
+	"OnCase01" "alarm2-caralarm_car1,Color,99 135 157,0,-1"
+	"OnCase02" "alarm2-caralarm_car1,Color,52 46 46,0,-1"
+	"OnCase03" "alarm2-caralarm_car1,Color,173 186 172,0,-1"
+	"OnCase04" "alarm2-caralarm_car1,Color,52 70 114,0,-1"
+	"OnCase05" "alarm2-caralarm_car1,Color,9 41 138,0,-1"
+	"OnCase06" "alarm2-caralarm_car1,Color,68 91 183,0,-1"
+}
+{
+	"classname" "logic_case"
+	"targetname" "alarm3-case_car_color_off"
+	"Case01" "1"
+	"Case02" "2"
+	"Case03" "3"
+	"Case04" "4"
+	"Case05" "5"
+	"Case06" "6"
+	"OnCase01" "alarm3-caralarm_car1,Color,99 135 157,0,-1"
+	"OnCase02" "alarm3-caralarm_car1,Color,52 46 46,0,-1"
+	"OnCase03" "alarm3-caralarm_car1,Color,173 186 172,0,-1"
+	"OnCase04" "alarm3-caralarm_car1,Color,52 70 114,0,-1"
+	"OnCase05" "alarm3-caralarm_car1,Color,9 41 138,0,-1"
+	"OnCase06" "alarm3-caralarm_car1,Color,68 91 183,0,-1"
+}
+{
+	"classname" "logic_case"
+	"targetname" "alarm4-case_car_color_off"
+	"Case01" "1"
+	"Case02" "2"
+	"Case03" "3"
+	"Case04" "4"
+	"Case05" "5"
+	"Case06" "6"
+	"OnCase01" "alarm4-caralarm_car1,Color,99 135 157,0,-1"
+	"OnCase02" "alarm4-caralarm_car1,Color,52 46 46,0,-1"
+	"OnCase03" "alarm4-caralarm_car1,Color,173 186 172,0,-1"
+	"OnCase04" "alarm4-caralarm_car1,Color,52 70 114,0,-1"
+	"OnCase05" "alarm4-caralarm_car1,Color,9 41 138,0,-1"
+	"OnCase06" "alarm4-caralarm_car1,Color,68 91 183,0,-1"
+}
+{
+	"classname" "logic_case"
+	"targetname" "alarm5-case_car_color_off"
+	"Case01" "1"
+	"Case02" "2"
+	"Case03" "3"
+	"Case04" "4"
+	"Case05" "5"
+	"Case06" "6"
+	"OnCase01" "alarm5-caralarm_car1,Color,99 135 157,0,-1"
+	"OnCase02" "alarm5-caralarm_car1,Color,52 46 46,0,-1"
+	"OnCase03" "alarm5-caralarm_car1,Color,173 186 172,0,-1"
+	"OnCase04" "alarm5-caralarm_car1,Color,52 70 114,0,-1"
+	"OnCase05" "alarm5-caralarm_car1,Color,9 41 138,0,-1"
+	"OnCase06" "alarm5-caralarm_car1,Color,68 91 183,0,-1"
+}
+{
+	"classname" "logic_case"
+	"targetname" "alarm6-case_car_color_off"
+	"Case01" "1"
+	"Case02" "2"
+	"Case03" "3"
+	"Case04" "4"
+	"Case05" "5"
+	"Case06" "6"
+	"OnCase01" "alarm6-caralarm_car1,Color,99 135 157,0,-1"
+	"OnCase02" "alarm6-caralarm_car1,Color,52 46 46,0,-1"
+	"OnCase03" "alarm6-caralarm_car1,Color,173 186 172,0,-1"
+	"OnCase04" "alarm6-caralarm_car1,Color,52 70 114,0,-1"
+	"OnCase05" "alarm6-caralarm_car1,Color,9 41 138,0,-1"
+	"OnCase06" "alarm6-caralarm_car1,Color,68 91 183,0,-1"
+}
+{
+	"classname" "logic_case"
+	"targetname" "alarm7-case_car_color_off"
+	"Case01" "1"
+	"Case02" "2"
+	"Case03" "3"
+	"Case04" "4"
+	"Case05" "5"
+	"Case06" "6"
+	"OnCase01" "alarm7-caralarm_car1,Color,99 135 157,0,-1"
+	"OnCase02" "alarm7-caralarm_car1,Color,52 46 46,0,-1"
+	"OnCase03" "alarm7-caralarm_car1,Color,173 186 172,0,-1"
+	"OnCase04" "alarm7-caralarm_car1,Color,52 70 114,0,-1"
+	"OnCase05" "alarm7-caralarm_car1,Color,9 41 138,0,-1"
+	"OnCase06" "alarm7-caralarm_car1,Color,68 91 183,0,-1"
+}
+{
+	"classname" "logic_case"
+	"targetname" "alarm8-case_car_color_off"
+	"Case01" "1"
+	"Case02" "2"
+	"Case03" "3"
+	"Case04" "4"
+	"Case05" "5"
+	"Case06" "6"
+	"OnCase01" "alarm8-caralarm_car1,Color,99 135 157,0,-1"
+	"OnCase02" "alarm8-caralarm_car1,Color,52 46 46,0,-1"
+	"OnCase03" "alarm8-caralarm_car1,Color,173 186 172,0,-1"
+	"OnCase04" "alarm8-caralarm_car1,Color,52 70 114,0,-1"
+	"OnCase05" "alarm8-caralarm_car1,Color,9 41 138,0,-1"
+	"OnCase06" "alarm8-caralarm_car1,Color,68 91 183,0,-1"
+}
+modify:
+{
+	match:
+	{
+		"targetname" "alarm1-relay_caralarm_on"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm1-case_car_color,PickRandom,,5,-1"
+		"OnTrigger" "alarm1-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm1-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm1-relay_caralarm_off"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm1-case_car_color_off,PickRandom,,5,-1"
+		"OnTrigger" "alarm1-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm1-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm2-relay_caralarm_on"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm2-case_car_color,PickRandom,,5,-1"
+		"OnTrigger" "alarm2-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm2-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm2-relay_caralarm_off"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm2-case_car_color_off,PickRandom,,5,-1"
+		"OnTrigger" "alarm2-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm2-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm3-relay_caralarm_on"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm3-case_car_color,PickRandom,,5,-1"
+		"OnTrigger" "alarm3-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm3-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm3-relay_caralarm_off"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm3-case_car_color_off,PickRandom,,5,-1"
+		"OnTrigger" "alarm3-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm3-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm4-relay_caralarm_on"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm4-case_car_color,PickRandom,,5,-1"
+		"OnTrigger" "alarm4-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm4-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm4-relay_caralarm_off"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm4-case_car_color_off,PickRandom,,5,-1"
+		"OnTrigger" "alarm4-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm4-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm5-relay_caralarm_on"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm5-case_car_color,PickRandom,,5,-1"
+		"OnTrigger" "alarm5-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm5-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm5-relay_caralarm_off"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm5-case_car_color_off,PickRandom,,5,-1"
+		"OnTrigger" "alarm5-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm5-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm6-relay_caralarm_on"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm6-case_car_color,PickRandom,,5,-1"
+		"OnTrigger" "alarm6-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm6-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm6-relay_caralarm_off"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm6-case_car_color_off,PickRandom,,5,-1"
+		"OnTrigger" "alarm6-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm6-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm7-relay_caralarm_on"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm7-case_car_color,PickRandom,,5,-1"
+		"OnTrigger" "alarm7-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm7-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm7-relay_caralarm_off"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm7-case_car_color_off,PickRandom,,5,-1"
+		"OnTrigger" "alarm7-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm7-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm8-relay_caralarm_on"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm8-case_car_color,PickRandom,,5,-1"
+		"OnTrigger" "alarm8-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm8-case_car_color_off,Kill,,10,-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "alarm8-relay_caralarm_off"
+	}
+	insert:
+	{
+		"OnTrigger" "alarm8-case_car_color_off,PickRandom,,5,-1"
+		"OnTrigger" "alarm8-case_car_color,Kill,,10,-1"
+		"OnTrigger" "alarm8-case_car_color_off,Kill,,10,-1"
+	}
+}
+; --- Remove original random color picking
+filter:
+{
+	"hammerid" "2969409"
+}
+{
+	"hammerid" "2978205"
+}
+{
+	"hammerid" "2972341"
+}
+{
+	"hammerid" "2970875"
+}
+{
+	"hammerid" "2976739"
+}
+{
+	"hammerid" "2967943"
+}
+{
+	"hammerid" "2973807"
+}
+{
+	"hammerid" "2975273"
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
