c5m3 extended the wall by the cemetery entrance c5m3 added infected ladders to the added crypt that blocks the path in the cemetery

--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -713,6 +713,32 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Extend wall at the cemetery entrance - Lighting cannot be made to match joining incorrectly lit walls
+{
+	"classname" "prop_dynamic"
+	"origin" "6712 -4832 96"
+	"angles" "0 0 0"
+	"model" "models/props_urban/gate_wall001_64.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "6712 -4800 96"
+	"angles" "0 270 0"
+	"model" "models/props_urban/gate_column001_32.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Clipping on wall
+{
+	"classname" "env_physics_blocker"
+	"origin" "6712 -4820 528"
+	"mins" "-12 -32 -432"
+	"maxs" "12 32 432"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 
 ; =====================================================
 ; ==                   LADDER NERF                   ==
@@ -1005,4 +1031,26 @@ modify:
 	{
 		"targetname" "Path_A_fence"
 	}
+}
+; --- Infected ladders to climb over blocked route
+add:
+{
+	"classname" "func_simpleladder"
+	"origin" "-476 1448 -84"
+	"angles" "0 0 0"
+	"model" "*268"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-386 1472 -84"
+	"angles" "0 0 0"
+	"model" "*283"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
 }
