Completed work on c3m3 c2m4 improved game hut sign clipping

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -66,6 +66,8 @@ modify:
 }
 ; --- Weapon Spawns - Any weapon type/Standard spawn
 ; --- NOTE: Count value does not affect versus - weapons are always infinite
+; --- Any T1: tier1_any / Pistols: any_pistol, weapon_pistol, weapon_pistol_magnum
+; --- SMGs: any_smg, weapon_smg, weapon_smg_silenced / T1 Shotguns: tier1_shotgun, weapon_pumpshotgun, weapon_shotgun_chrome
 add:
 {
 	"classname" "weapon_spawn"
