--- a/cfg/stripper/maps/c3m2_swamp.cfg
+++ b/cfg/stripper/maps/c3m2_swamp.cfg
@@ -626,7 +626,7 @@ add:
 ; ==  Prevent players from getting stuck in the map  ==
 ; =====================================================
 add:
-; --- Block a perma-stuck spot on a tree stumps in the water by the docks
+; --- Block a perma-stuck spot on tree stumps in the water by the docks
 {
 	"classname" "env_physics_blocker"
 	"origin" "-4399 3189 16"
