Started work on c3m4 Converted all T2 static weapon spawns to T1 weapon_spawn entities Moved prop_physics_override fix to the top of global filters to improve execution order Prevented hittables from fading out over far distances c2m4 added teleport triggers for survivors that get stuck inside new props in the saferoom c2m2 adjusted color of added hedge at the end of the map Added template for hittable props

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -40,6 +40,15 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Hittables
+{
+	"classname" "prop_physics"
+	"origin" "[x y z]"
+	"angles" "[p y r]"
+	"model" "[file path]"
+	"solid" "6"
+	"fadescale" "0"
+}
 ; --- Ammo Piles
 add:
 {
