--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -96,7 +96,7 @@ add:
 	"angles" "0 270 0"
 	"model" "models/props_junk/dumpster_2.mdl"
 	"solid" "6"
-	"disableshadows" "1"
+	"fadescale" "0"
 	"spawnflags" "256"
 }
 
@@ -1263,7 +1263,7 @@ add:
 	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
 	"solid" "6"
 	"disableshadows" "1"
-	"rendercolor" "193 197 188"
+	"rendercolor" "218 200 184"
 	"lightingorigin" "hedge_lighting"
 }
 {
