--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -101,12 +101,20 @@ add:
 add:
 {
 	"classname" "logic_auto"
-	; --- Remove bumper cars and clip
+	; --- Create teleport trigger
+	"OnMapSpawn" "bumper_teleport_trigger,AddOutput,mins -90 -45 -80,0,-1"
+	"OnMapSpawn" "bumper_teleport_trigger,AddOutput,maxs 90 45 80,0,-1"
+	"OnMapSpawn" "bumper_teleport_trigger,AddOutput,boxmins -90 -45 -80,0,-1"
+	"OnMapSpawn" "bumper_teleport_trigger,AddOutput,boxmaxs 90 45 80,0,-1"
+	"OnMapSpawn" "bumper_teleport_trigger,AddOutput,solid 2,0,-1"
+	; --- Remove bumper cars
 	"OnMapSpawn" "anv_mapfixes_hittable_bumpera,Kill,,10,-1"
 	"OnMapSpawn" "anv_mapfixes_hittable_bumperb,Kill,,10,-1"
-	"OnMapSpawn" "bumper_safety_clip,Kill,,12,-1"
 	; --- Spawn new bumper car
 	"OnMapSpawn" "saferoom_bumper_replacement_template,ForceSpawn,,11,-1"
+	; --- Remove blocker and teleport trigger
+	"OnMapSpawn" "bumper_safety_clip,Kill,,12,-1"
+	"OnMapSpawn" "bumper_teleport_trigger,Kill,,12,-1"
 }
 {
 	"classname" "prop_physics"
@@ -115,6 +123,7 @@ add:
 	"model" "models/props_fairgrounds/bumpercar.mdl"
 	"solid" "6"
 	"targetname" "saferoom_bumper_replacement"
+	"fadescale" "0"
 }
 ; --- Template to spawn the bumper car
 {
@@ -133,6 +142,16 @@ add:
 	"BlockType" "1"
 	"targetname" "bumper_safety_clip"
 }
+; --- Teleport survivors that get stuck in the clip
+{
+	"classname" "trigger_teleport"
+	"origin" "3293 3294 -107"
+	"targetname" "bumper_teleport_trigger"
+	"filtername" "filter_survivors"
+	"spawnflags" "1"
+	"StartDisabled" "0"
+	"target" "saferoom_teleport_position"
+}
 ; --- Removed one of the dumpsters after the bumper cars
 filter:
 {
@@ -146,7 +165,7 @@ add:
 	"angles" "0 340"
 	"model" "models/props/cs_assault/forklift.mdl"
 	"solid" "6"
-	"disableshadows" "1"
+	"fadescale" "0"
 }
 
 
@@ -500,6 +519,45 @@ add:
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
+add:
+; --- Teleport survivors that get stuck inside new saferoom props
+{
+	"classname" "info_teleport_destination"
+	"origin" "3060 3579 -179"
+	"angles" "0 180 0"
+	"targetname" "saferoom_teleport_position"
+}
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "large_crate_teleport_trigger,AddOutput,mins -46 -46 -63,0,-1"
+	"OnMapSpawn" "large_crate_teleport_trigger,AddOutput,maxs 46 46 63,0,-1"
+	"OnMapSpawn" "large_crate_teleport_trigger,AddOutput,boxmins -46 -46 -63,0,-1"
+	"OnMapSpawn" "large_crate_teleport_trigger,AddOutput,boxmaxs 46 46 63,0,-1"
+	"OnMapSpawn" "large_crate_teleport_trigger,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "small_crate_teleport_trigger,AddOutput,mins -30 -30 -30,0,-1"
+	"OnMapSpawn" "small_crate_teleport_trigger,AddOutput,maxs 30 30 30,0,-1"
+	"OnMapSpawn" "small_crate_teleport_trigger,AddOutput,boxmins -30 -30 -30,0,-1"
+	"OnMapSpawn" "small_crate_teleport_trigger,AddOutput,boxmaxs 30 30 30,0,-1"
+	"OnMapSpawn" "small_crate_teleport_trigger,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "trigger_teleport"
+	"origin" "3329 3873 -124"
+	"targetname" "large_crate_teleport_trigger"
+	"filtername" "filter_survivors"
+	"spawnflags" "1"
+	"StartDisabled" "0"
+	"target" "saferoom_teleport_position"
+}
+{
+	"classname" "trigger_teleport"
+	"origin" "3344 3789 -156 3294 -107"
+	"targetname" "small_crate_teleport_trigger"
+	"filtername" "filter_survivors"
+	"spawnflags" "1"
+	"StartDisabled" "0"
+	"target" "saferoom_teleport_position"
+}
 filter:
 ; --- Disable the Strongman event
 {
