--- a/cfg/stripper/maps/c3m1_plankcountry.cfg
+++ b/cfg/stripper/maps/c3m1_plankcountry.cfg
@@ -67,6 +67,7 @@ add:
 	"angles" "0 180 0"
 	"model" "models/props_junk/dumpster_2.mdl"
 	"solid" "6"
+	"fadescale" "0"
 }
 modify:
 ; --- Move the 2 dumpsters by the saferoom into more useful positions and enable physics on spawning
