--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -14,10 +14,170 @@
 ;}
 
 ; =====================================================
+; ==                 ENTITY TYPE FIX                 ==
+; ==     Fix entities using the wrong class type     ==
+; =====================================================
+modify:
+; --- Fix custom campaigns using the wrong physics prop type, which prevents our global fixes from being applied
+; --- prop_physics_multiplayer is essentially a legacy entity that functions identically to prop_physics but serves no purpose in L4D2, it does not affect networking overhead
+{
+	match:
+	{
+		"classname" "prop_physics_multiplayer"
+	}
+	replace:
+	{
+		"classname" "prop_physics"
+	}
+}
+
+; =====================================================
 ; ==               T2 WEAPON SPAWN FIX               ==
 ; ==  Prevent director from spawning tier 2 weapons  ==
 ; =====================================================
 modify:
+; --- Convert static weapon spawns into weapon_spawn
+{
+	match:
+	{
+		"classname" "weapon_autoshotgun_spawn"
+	}
+	replace:
+	{
+		"classname" "weapon_spawn"
+	}
+	insert:
+	{
+		"weapon_selection" "tier1_shotgun"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_shotgun_spas_spawn"
+	}
+	replace:
+	{
+		"classname" "weapon_spawn"
+	}
+	insert:
+	{
+		"weapon_selection" "tier1_shotgun"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_rifle_spawn"
+	}
+	replace:
+	{
+		"classname" "weapon_spawn"
+	}
+	insert:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_rifle_ak47_spawn"
+	}
+	replace:
+	{
+		"classname" "weapon_spawn"
+	}
+	insert:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_rifle_desert_spawn"
+	}
+	replace:
+	{
+		"classname" "weapon_spawn"
+	}
+	insert:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_rifle_sg552_spawn"
+	}
+	replace:
+	{
+		"classname" "weapon_spawn"
+	}
+	insert:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_hunting_rifle_spawn"
+	}
+	replace:
+	{
+		"classname" "weapon_spawn"
+	}
+	insert:
+	{
+		"weapon_selection" "tier1_any"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_sniper_military_spawn"
+	}
+	replace:
+	{
+		"classname" "weapon_spawn"
+	}
+	insert:
+	{
+		"weapon_selection" "tier1_any"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_sniper_scout_spawn"
+	}
+	replace:
+	{
+		"classname" "weapon_spawn"
+	}
+	insert:
+	{
+		"weapon_selection" "tier1_any"
+	}
+}
+{
+	match:
+	{
+		"classname" "weapon_sniper_awp_spawn"
+	}
+	replace:
+	{
+		"classname" "weapon_spawn"
+	}
+	insert:
+	{
+		"weapon_selection" "tier1_any"
+	}
+}
+; --- Convert T2 weapon spawns into T1
 {
 	match:
 	{
@@ -305,6 +465,349 @@ filter:
 filter:
 {
 	"classname" "env_sun"
+}
+
+; =====================================================
+; ==            HITTABLE RENDER DISTANCE             ==
+; ==   Prevent hittables from fading over distance   ==
+; =====================================================
+modify:
+{
+	match:
+	{
+		"classname" "prop_car_alarm"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_junk/dumpster.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_junk/dumpster_2.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/cara_69sedan.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/cara_82hatchback.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/cara_82hatchback_wrecked.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/cara_84sedan.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/cara_95sedan.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/cara_95sedan_wrecked.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/police_car.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/police_car_city.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/police_car_lights_on.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/police_car_opentrunk.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/police_car_rural.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/taxi_cab.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/taxi_city.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/taxi_rural.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props/cs_assault/forklift.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props/cs_assault/forklift_brokenlift.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/airport_baggage_cart2.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_foliage/swamp_fallentree01_bare.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_foliage/tree_trunk_fallen.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_unique/haybails_single.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_fairgrounds/bumpercar.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_vehicles/generatortrailer01.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props/cs_assault/handtruck.mdl"
+	}
+	replace:
+	{
+		"fadescale" "0"
+		"fademindist" "-1"
+		"fademaxdist" "0"
+	}
 }
 
 ; =====================================================
@@ -761,24 +1264,6 @@ filter:
 filter:
 {
 	"classname" "prop_fuel_barrel"
-}
-
-; =====================================================
-; ==                 ENTITY TYPE FIX                 ==
-; ==     Fix entities using the wrong class type     ==
-; =====================================================
-modify:
-; --- Fix custom campaigns using the wrong physics prop type, which prevents our global fixes from being applied
-; --- prop_physics_multiplayer is essentially a legacy entity that functions identically to prop_physics but serves no purpose in L4D2, it does not affect networking overhead
-{
-	match:
-	{
-		"classname" "prop_physics_multiplayer"
-	}
-	replace:
-	{
-		"classname" "prop_physics"
-	}
 }
 
 ; =====================================================
