--- a/cfg/stripper/maps/c3m2_swamp.cfg
+++ b/cfg/stripper/maps/c3m2_swamp.cfg
@@ -251,7 +251,7 @@ add:
 	"StartDisabled" "0"
 	"spawnflags" "256"
 	"rendercolor" "153 65 29"
-	"disableshadows" "0"
+	"fadescale" "0"
 	"model" "models/props_vehicles/cara_95sedan.mdl"
 	"OnCarAlarmStart" "caralarm_saferoom_alarmtimer,Enable,,0,-1"
 	"OnCarAlarmEnd" "caralarm_saferoom_alarmtimer,Disable,,0,-1"
