Updated readme c2m4 teleport trigger correction

--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -551,7 +551,7 @@ add:
 }
 {
 	"classname" "trigger_teleport"
-	"origin" "3344 3789 -156 3294 -107"
+	"origin" "3344 3789 -156"
 	"targetname" "small_crate_teleport_trigger"
 	"filtername" "filter_survivors"
 	"spawnflags" "1"
