Completed work on c3m4

--- a/cfg/stripper/maps/c3m4_plantation.cfg
+++ b/cfg/stripper/maps/c3m4_plantation.cfg
@@ -282,6 +282,70 @@ add:
 	"solid" "0"
 	"disableshadows" "1"
 }
+; --- Block LOS under floating trees
+{
+	"classname" "logic_auto"
+	; --- Large trees
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_large_a,AddOutput,mins -48 -1 -18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_large_a,AddOutput,maxs 48 1 18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_large_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_large_b,AddOutput,mins -1 -48 -18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_large_b,AddOutput,maxs 1 48 18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_large_b,AddOutput,solid 2,0,-1"
+	; --- Medium trees
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_medium_a,AddOutput,mins -28 -1 -18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_medium_a,AddOutput,maxs 28 1 18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_medium_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_medium_b,AddOutput,mins -1 -28 -18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_medium_b,AddOutput,maxs 1 28 18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_medium_b,AddOutput,solid 2,0,-1"
+	; --- Small trees
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_small_a,AddOutput,mins -23 -1 -18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_small_a,AddOutput,maxs 23 1 18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_small_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_small_b,AddOutput,mins -1 -23 -18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_small_b,AddOutput,maxs 1 23 18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_small_b,AddOutput,solid 2,0,-1"
+	; --- Very small trees
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_vsmall_a,AddOutput,mins -19 -1 -18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_vsmall_a,AddOutput,maxs 19 1 18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_vsmall_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_vsmall_b,AddOutput,mins -1 -19 -18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_vsmall_b,AddOutput,maxs 1 19 18,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_swamptree_vsmall_b,AddOutput,solid 2,0,-1"
+}
+; --- By saferoom
+{
+	"classname" "func_brush"
+	"origin" "-3642 -1522 -114"
+	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+}
+{
+	"classname" "func_brush"
+	"origin" "-3642 -1522 -114"
+	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+}
+{
+	"classname" "func_brush"
+	"origin" "-3072 -1080 -116"
+	"targetname" "anv_mapfixes_losfix_swamptree_large_a"
+}
+{
+	"classname" "func_brush"
+	"origin" "-3072 -1080 -116"
+	"targetname" "anv_mapfixes_losfix_swamptree_large_b"
+}
+; --- By the escape
+{
+	"classname" "func_brush"
+	"origin" "2107 3571 -68"
+	"targetname" "anv_mapfixes_losfix_swamptree_medium_a"
+}
+{
+	"classname" "func_brush"
+	"origin" "2107 3571 -68"
+	"targetname" "anv_mapfixes_losfix_swamptree_medium_b"
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
@@ -434,6 +498,156 @@ add:
 	"origin" "-1599 -2889 8"
 	"targetname" "anv_mapfixes_losfix_extra_trailer_start_c"
 }
+; --- Log pile before the road leading to the mansion
+{
+	"classname" "prop_dynamic"
+	"origin" "-773 -3540 -2"
+	"angles" "0 45 0"
+	"model" "models/props/cs_militia/logpile2.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Trees on the road leading to the mansion, by the tractor
+{
+	"classname" "prop_dynamic"
+	"origin" "579 -3126 36"
+	"angles" "0 0 0"
+	"model" "models/props_foliage/urban_tree_giant01.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1345 -3417 26"
+	"angles" "0 270 0"
+	"model" "models/props_foliage/urban_tree_giant01.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Hedges between the trees leading to the mansion (left side)
+{
+	"classname" "prop_dynamic"
+	"origin" "1336 -2640 56"
+	"angles" "0 85 0"
+	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1327 -2029 69"
+	"angles" "0 85 0"
+	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1373 -1471 119"
+	"angles" "0 95 0"
+	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Block left side hedges for survivors
+{
+	"classname" "env_physics_blocker"
+	"origin" "1336 -2643 680"
+	"angles" "0 -5 0"
+	"mins" "-21 -125 -472"
+	"maxs" "21 125 472"
+	"boxmins" "-21 -125 -472"
+	"boxmaxs" "21 125 472"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "1327 -2032 684"
+	"angles" "0 -5 0"
+	"mins" "-21 -125 -468"
+	"maxs" "21 125 468"
+	"boxmins" "-21 -125 -468"
+	"boxmaxs" "21 125 468"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "1374 -1474 708"
+	"angles" "0 5 0"
+	"mins" "-21 -125 -444"
+	"maxs" "21 125 444"
+	"boxmins" "-21 -125 -444"
+	"boxmaxs" "21 125 444"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Hedges between the trees leading to the mansion (right side)
+{
+	"classname" "prop_dynamic"
+	"origin" "1982 -2311 55"
+	"angles" "0 100 0"
+	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2008 -1777 86"
+	"angles" "0 88 0"
+	"model" "models/props_foliage/urban_hedge_256_128_high.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Block right side hedges for survivors
+{
+	"classname" "env_physics_blocker"
+	"origin" "1982 -2312 676"
+	"angles" "0 10 0"
+	"mins" "-21 -125 -476"
+	"maxs" "21 125 476"
+	"boxmins" "-21 -125 -476"
+	"boxmaxs" "21 125 476"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "2008 -1777 682"
+	"angles" "0 -2 0"
+	"mins" "-21 -125 -460"
+	"maxs" "21 125 460"
+	"boxmins" "-21 -125 -460"
+	"boxmaxs" "21 125 460"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Walls to cover gates by the ladder into the mansion
+{
+	"classname" "prop_dynamic"
+	"origin" "1356 -1143.1 175"
+	"angles" "0 90 0"
+	"model" "models/props_urban/gate_wall001_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1971 -1143.1 175"
+	"angles" "0 270 0"
+	"model" "models/props_urban/gate_wall001_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "2199.1 -1068 176"
+	"angles" "0 180 0"
+	"model" "models/props_urban/gate_wall001_128.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
 
 ; =====================================================
 ; ==                   LADDER NERF                   ==
@@ -535,6 +749,157 @@ add:
 	"solid" "0"
 	"disableshadows" "1"
 }
+; --- Infected ladders to get on the last house on the left side of the street
+{
+	"classname" "func_simpleladder"
+	"origin" "-4469 -1577 -9"
+	"angles" "0 90 0"
+	"model" "*29"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-1022 -2613 157"
+	"angles" "0 180 0"
+	"model" "models/props_downtown/gutter_downspout_straight_160_02.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "843 -4903 144"
+	"angles" "0 90 0"
+	"model" "*56"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Wrong way signs for clips on this house
+{
+	"classname" "prop_dynamic"
+	"origin" "-894 -2612 316"
+	"angles" "0 180 0"
+	"model" "models/props_misc/wrongway_sign01_optimized.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+	"fademindist" "300"
+	"fademaxdist" "20"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-894 -2756 316"
+	"angles" "0 180 0"
+	"model" "models/props_misc/wrongway_sign01_optimized.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+	"fademindist" "300"
+	"fademaxdist" "20"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-826 -2820 348"
+	"angles" "0 270 0"
+	"model" "models/props_misc/wrongway_sign01_optimized.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+	"fademindist" "300"
+	"fademaxdist" "20"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-682 -2820 420"
+	"angles" "0 270 0"
+	"model" "models/props_misc/wrongway_sign01_optimized.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+	"fademindist" "300"
+	"fademaxdist" "20"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-682 -2820 420"
+	"angles" "0 270 0"
+	"model" "models/props_misc/wrongway_sign01_optimized.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+	"fademindist" "300"
+	"fademaxdist" "20"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-642 -2762 444"
+	"angles" "0 0 0"
+	"model" "models/props_misc/wrongway_sign01_optimized.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+	"fademindist" "300"
+	"fademaxdist" "20"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-642 -2620 444"
+	"angles" "0 0 0"
+	"model" "models/props_misc/wrongway_sign01_optimized.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+	"fademindist" "300"
+	"fademaxdist" "20"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-562 -2556 412"
+	"angles" "0 270 0"
+	"model" "models/props_misc/wrongway_sign01_optimized.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+	"fademindist" "300"
+	"fademaxdist" "20"
+}
+; --- Infected ladders to get over fences outside last house on the left side of the street
+{
+	"classname" "func_simpleladder"
+	"origin" "-2827 -731 -128"
+	"angles" "0 270 0"
+	"model" "*56"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "398 -4734 -128"
+	"angles" "0 90 0"
+	"model" "*56"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-3397.89 -4242.13 -128"
+	"angles" "0 -13.5 0"
+	"model" "*56"
+	"normal.x" "0.23"
+	"normal.y" "0.97"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "1220.89 -2036.86 -128"
+	"angles" "0 166.5 0"
+	"model" "*56"
+	"normal.x" "-0.23"
+	"normal.y" "-0.97"
+	"normal.z" "0.00"
+	"team" "2"
+}
 ; --- Infected ladder on other side of green dumpster by the ladder at the mansion entrance
 {
 	"classname" "func_simpleladder"
@@ -583,6 +948,131 @@ add:
 	"model" "models/props_furniture/shelf1.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+}
+; --- Fix ladders on hedges being too low down
+modify:
+; --- Outside saferoom
+{
+	match:
+	{
+		"hammerid" "502235"
+	}
+	insert:
+	{
+		"origin" "0 0 8"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "502203"
+	}
+	insert:
+	{
+		"origin" "0 0 8"
+	}
+}
+; --- Road leading to mansion
+{
+	match:
+	{
+		"hammerid" "502152"
+	}
+	insert:
+	{
+		"origin" "0 0 4"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "502148"
+	}
+	insert:
+	{
+		"origin" "0 0 4"
+	}
+}
+; --- Finale area
+{
+	match:
+	{
+		"hammerid" "589338"
+	}
+	insert:
+	{
+		"origin" "0 0 4"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "589342"
+	}
+	insert:
+	{
+		"origin" "0 0 4"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "588802"
+	}
+	insert:
+	{
+		"origin" "0 0 4"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "588806"
+	}
+	insert:
+	{
+		"origin" "0 0 4"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "588778"
+	}
+	insert:
+	{
+		"origin" "0 0 4"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "588262"
+	}
+	insert:
+	{
+		"origin" "0 0 4"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "589194"
+	}
+	insert:
+	{
+		"origin" "0 0 4"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "589198"
+	}
+	insert:
+	{
+		"origin" "0 0 4"
+	}
 }
 
 
