c3m1 move change to correct category c3m2 corrected comment c3m4 corrected comment

--- a/cfg/stripper/maps/c3m2_swamp.cfg
+++ b/cfg/stripper/maps/c3m2_swamp.cfg
@@ -1614,7 +1614,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Shrub and tree in the right side water section after the plane
+; --- Shrub and tree in the left side water section after the plane
 {
 	"classname" "prop_dynamic"
 	"origin" "-359 4072 -21"
