--- a/cfg/stripper/maps/c3m4_plantation.cfg
+++ b/cfg/stripper/maps/c3m4_plantation.cfg
@@ -40,7 +40,7 @@ add:
 	"spawnflags" "2"
 	"count" "5"
 }
-; --- Shovel by the hedges on scaffolding side  in the finale area
+; --- Shovel by the hedges on scaffolding side in the finale area
 {
 	"classname" "weapon_melee_spawn"
 	"origin" "863 1288 159"
@@ -265,7 +265,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "2"
 }
-; --- Flags poles in event area to show where fences become blocked off by clips
+; --- Poles in event area to show where fences become blocked off by clips
 {
 	"classname" "prop_dynamic"
 	"origin" "256 1212 256"
